--- a/pybasic/pybasic1.html
+++ b/pybasic/pybasic1.html
@@ -17,3 +17,21 @@ print(s2,type(s2))
 Basic Style [Lower Limit: Upper Limit: Step Size]<br />
 <code>print(s1[2:0:-1])</code><br />
 (The Upper limit itself is not included.)</p>
+<h2>Strings are tuples</h2>
+<h2>Operation</h2>
+<p><code>print 'a' in ['a','b']</code></p>
+<h2>Indent</h2>
+<pre><code>a=2  
+b=1  
+if a&gt;b:
+   print a+b
+else:
+   print a-b  
+</code></pre>
+
+<h2>Loop</h2>
+<p>range()<br />
+for element in sequence<br />
+while conditon:<br />
+continue<br />
+break  </p>
