--- a/pybasic/pybasic1.html
+++ b/pybasic/pybasic1.html
@@ -56,4 +56,12 @@ print b
 <p>In the first example, we pass an integer variable to a function, which operates on it, but the original integer variable a does not change.
 In the second example, we pass a table to a function, which operates, and the original table B changes.
 For variables of basic data type, when variables are passed to the function, the function replicates a new variable in memory without affecting the original variable. (We call this value transfer)
-    But for a table, the table passes a pointer to the function, pointer points to the position of the sequence in memory, the operation of the table in the function will be carried out in the original memory, thus affecting the original variables. We call this pointer passing.</p>
+But for a table, the table passes a pointer to the function, pointer points to the position of the sequence in memory, the operation of the table in the function will be carried out in the original memory, thus affecting the original variables. We call this pointer passing.</p>
+<h2>Object-oriented programming</h2>
+<p>Python uses class and object to perform object-oriented programming (OOP) programming.</p>
+<pre><code>class Bird(object):
+    have_feather= True
+    way_of_reproduction = 'egg'
+</code></pre>
+
+<p>References to <em>attributes</em> are implemented as objects.attribute.  </p>
